--- a/GraphQLNetExample/GraphQLNetExample.csproj
+++ b/GraphQLNetExample/GraphQLNetExample.csproj
@@ -6,15 +6,23 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.3" />
-    <PackageReference Include="GraphQL" Version="4.6.1" />
-    <PackageReference Include="GraphQL.MicrosoftDI" Version="4.6.1" />
-    <PackageReference Include="GraphQL.Server.Authorization.AspNetCore" Version="5.0.2" />
-    <PackageReference Include="GraphQL.Server.Transports.AspNetCore.SystemTextJson" Version="5.0.2" />
-    <PackageReference Include="GraphQL.Server.Ui.Altair" Version="5.0.2" />
-    <PackageReference Include="GraphQL.SystemTextJson" Version="4.6.1" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
-  </ItemGroup>
 
+	<ItemGroup>
+		<PackageReference Include="GraphQL" Version="4.6.1" />
+		<PackageReference Include="GraphQL.MicrosoftDI" Version="4.6.1" />
+		<PackageReference Include="GraphQL.Server.Authorization.AspNetCore" Version="5.0.2" />
+		<PackageReference Include="GraphQL.Server.Transports.AspNetCore.SystemTextJson" Version="5.0.2" />
+		<PackageReference Include="GraphQL.Server.Ui.Altair" Version="5.0.2" />
+		<PackageReference Include="GraphQL.SystemTextJson" Version="4.6.1" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.0">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.0" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.0">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+	</ItemGroup>
 </Project>
